[package]
name = "hello-grpc"
version = "0.1.0"
authors = ["guiga"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.3"
prost = "0.7.0"
# Only necessary if using Protobuf well-known types:
prost-types = "0.7"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.4.2"

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

# client binary
[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "lab"
path = "src/lab.rs"

