[package]
name = "hello-grpc"
version = "0.1.0"
authors = ["guiga"]
edition = "2018"

[dependencies]
tonic = "0.5"
prost = "0.8"
# Only necessary if using Protobuf well-known types:
#prost-types = "0.7"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.5"

[[bin]]
name = "sat"
path = "src/satellites.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "lab"
path = "src/lab.rs"

[[bin]]
name = "lab2"
path = "src/lab2.rs"